@@ -1,0 +1,1 @@
+make debug=yes && obj/leaktest | sort -n
